# ds25a-5-meteorite-impacts

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
data/: data.py
docs/: .gitignore  Prasentation.qmd  _quarto.yml  data_report.qmd  data_report.quarto_ipynb_1  data_report.quarto_ipynb_2  data_report.quarto_ipynb_3  index.qmd  meeting_notes.qmd  meteorite_report.html  project_charta.qmd  storytelling.qmd  styles.css
docs/_freeze/data_report/execute-results/: html.json
eda/: eda.ipynb  map.ipynb  meteorite_report.html
viz_design/: Meteorite_Landings_cleaned.csv  README.md  app.py  clean_data.py  data_cleanup.py  filters.py  image_fetch.py  meteorite_introduction.py  requirements.txt  timeline.py
viz_design/ExploreData/: filters.py  formatting.py  point_sampling.py  wiki_page.py
viz_design/ExploreData/widgets/: __init__.py  class_bar.py  globe_plot.py  mass_hist.py  timeline_plot.py
viz_design/Introduction/: meteorite_introduction.py
viz_design/Timeline/: impacts_per_year.py  meteorite_classes_barchart.py  timeline.py  weight_histogram.py
viz_design/widgets/: globe_plot.py  heatmap_2d.py  mass_hist.py
