[project]
name = "sample-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "icrawler>=0.6.10",
    "jupyterlab>=4.4.7",
    "matplotlib>=3.10.6",
    "pandas>=2.3.2",
    "python-dotenv>=1.1.1",
    "seaborn>=0.13.2",
    "ydata-profiling>=4.12.2",
    "shiny>=0.7.0",
    "ipykernel>=6.30.1",
    "cartopy>=0.25.0",
]
